objects/APTS_SAP_Request__c.object
<CustomObject>
    <description>this is a staging object that keeps track of asynchronous SAP requests and acts as a parent for the responses</description>
    <fields>
        <fullName>BusinessObjectId__c</fullName>
        <description>Id to the parent object (one field for both types quote &amp; agreement to save lookups)</description>
        <label>BusinessObjectId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Msg__c</fullName>
        <inlineHelpText>this is empty for status &quot;Success&quot; and &quot;Pending&quot;</inlineHelpText>
        <label>Response Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SAP Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SAP-{0000}</displayFormat>
        <label>SAP Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>